# labels

./: .dockerignore  .editorconfig  .envrc  .gitignore  .hadolint.yaml  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  _config.yml  action.yml  actions.yml  azure-pipelines.yml  docker.mk  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sync-setup.py  tox.ini
.dependabot/: config.yml
.github/: labels.toml
.github/workflows/: branch.yml  build.yml  default.yml  dogfood.yml  labels.yml  push.yml
make/: base.mk  docker.mk  python-fmt.mk
makefiles/: docker.mk  help.mk
scripts/: fork.sh  getversion.py
src/labels/: __init__.py  cli.py  github.py  utils.py
tests/: conftest.py  test_cli.py  test_github.py  test_io.py  test_utils.py
