[tool]
[tool.poetry]
name = "labels"
version = "0.1.0"
description = "Python (3.6 and newer) CLI app to manage GitHub issue labels"
license = "MIT"
authors = ["Raphael Pierzina <raphael@hackebrot.de>"]
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

keywords = ["github", "command-line", "issue-labels"]

[tool.poetry.scripts]
labels = "labels.cli:labels"

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "*"
click = "~7.0"
pytoml = "~0.1.21"
requests = "~2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
responses = "~0.10.8"
pytest-mock = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
