[tool]
[tool.poetry]
name = "labels"
version = "0.3.0"
description = "Python (3.6 and newer) CLI app to manage GitHub issue labels"
license = "MIT"
authors = ["Raphael Pierzina <raphael@hackebrot.de>"]
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

keywords = ["github", "command-line", "issue-labels"]

[tool.poetry.scripts]
labels = "labels.cli:labels"

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "*"
click = "~7.0"
pytoml = "~0.1.21"
requests = "~2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "~5.2"
responses = "*"
pytest-mock = "~2.0"
isort = { version = "*", extras = ["pyproject"] }
black = "^20.8b0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
