[metadata]
exclude = *.egg*,.env,.git,.tox,_*,build*,dist*,venv*,.venv,.mypy_cache,virtualenv

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude=.tox,.venv,venv,vendor

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
